# rediSQL

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  404.html  BUILD.md  CNAME  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  build.rs  index.html  projection.c  projection.h  rediSQL.c  rediSQL.h  redis_dependencies.h  release.py  rustfmt.toml  sitemap.xml  sqlite_dependencies.h  sqlite_dump.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
blog/JaaS/: index.html
blog/analytics/: index.html
blog/golang/using-redisql-with-golang/: index.html
blog/hierarchical_json/: index.html
blog/node/: package-lock.json
blog/node/using-redisql-with-node/: index.html
blog/performances/: index.html
blog/python/using-redisql-with-python/: index.html
blog/release_0.5.0/: index.html
blog/release_0.6.0/: index.html
blog/release_0.7.0/: index.html
blog/release_0.8.0/: index.html
blog/release_0.9.0/: index.html
blog/tutorial/: index.html
ci/: install.sh
doc/: mkdocs.yml
doc/docs/: faqs.md  index.md  motivations.md  pro.md  pro_motivations.md  references.md
doc/docs/blog/: JaaS.md  analytics.md  performances.md  release_0.5.0.md  release_0.6.0.md  release_0.7.0.md  release_0.8.0.md  release_0.9.0.md  tutorial.md
doc/docs/blog/golang/: main.go  using-redisql-with-golang.md
doc/docs/blog/node/: hn.js  using-redisql-with-node.md
doc/docs/blog/python/: requirements.txt  using-redisql-with-python.md
doc/docs/blog/python/src/: main.py  simple.py
doc/docs/references/: create_db.md  destroy_db.md
faq/: index.html
faqs/: index.html
mkdocs/: search_index.json
motivations/: index.html
parser/: Cargo.toml
parser/src/: common.rs  create_db.rs  exec.rs  lib.rs  statement.rs
pro/: index.html
pro_motivations/: index.html
redisql_lib/: Cargo.toml  build.rs  sqlite_dependencies.h
redisql_lib/src/: community_statement.rs  dump_sqlite.rs  lib.rs  memory_allocator.rs  redis.rs  redis_type.rs  redisql_error.rs  sqlite.rs  statistics.rs  virtual_tables.rs
redisql_lib/src/CDeps/Redis/: redismodule.c
redisql_lib/src/CDeps/Redis/include/: redismodule.h
redisql_lib/src/CDeps/SQLite/include/: sqlite3.h.gch
references/: index.html
src/: commands.rs  commands_v1.rs  commands_v2.rs  common.rs  community_statement.rs  lib.rs  redis.rs  redisql_error.rs  sqlite.rs  telemetrics.rs
src/CDeps/: sqlite_dump.c
src/CDeps/Redis/: redismodule.c
src/CDeps/Redis/include/: export_redismodule.h
src/v2/: create_db.rs  exec.rs  mod.rs  statement.rs
sync_engine/: Cargo.toml  build.rs
sync_engine/src/: lib.rs
sync_engine/src/CDeps/: sqlite_dump.c  sqlite_dump.h
telemetrics/: Cargo.toml
telemetrics/src/: lib.rs
test/correctness/: pip-selfcheck.json  requirements.txt  test.py  test_v1.py  test_v2.py
test/correctness/local/: bin  include  lib
test/performance/: benchmark_load_1.csv  benchmark_load_2.csv  benchmark_load_3.csv  benchmark_load_4.csv  benchmark_load_5.csv  benchmark_unload_1.csv  benchmark_unload_2.csv  benchmark_unload_3.csv  benchmark_unload_4.csv  benchmark_unload_5.csv  pip-selfcheck.json  rediSQL_bench.py  requirements.txt
test/performance/local/: bin  include  lib
website/: index.html
