[package]
name = "rediSQL"
version = "0.8.0"
authors = ["Simone Mosciatti <simone@redbeardlab.tech>"]

[lib]
name = "redis_sql"
crate-type = ["cdylib"]

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
log = {version = "0.4", features = ["release_max_level_warn"]}
env_logger = "0.6"
redisql_lib = {path = "./redisql_lib"}
# engine_pro = {path = "./engine_pro", optional = true}

[features]
default = []
# pro = ["engine_pro"]
# trial = ["engine_pro/trial"]

