[package]
name = "sync_engine"
version = "0.5.1-rc01"
authors = ["Simone Mosciatti <mweb.sim@gmail.com>"]

[build-dependencies]
cc = {version = "1.0.3", features = ["parallel"]}

[dependencies]
redisql_lib = {path = "../redisql_lib"}
log = {version = "0.3.8", features = ["release_max_level_warn"]}

[features]
default = []

trial = []
