[package]
name = "telemetrics"
version = "0.1.0"
authors = ["Simone Mosciatti <simone.mosciatti@cern.ch>"]
edition = "2018"

[dependencies]
redisql_lib = {path = "../redisql_lib"}
log = {version = "0.4", features = ["release_max_level_warn"]}
reqwest = {version = "0.9", features = ["default-tls-vendored"]}
