[package]
name = "telemetrics"
version = "0.1.0"
authors = ["Simone Mosciatti <simone.mosciatti@cern.ch>"]
edition = "2018"

[dependencies]
redisql_lib = {path = "../redisql_lib"}
log = {version = "0.4", features = ["release_max_level_warn"]}

[dependencies.ureq]
version = "0.11.3"
default-features = false
features = ["tls"]
